kubernetes/apps/business/vikunja/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vikunja
  namespace: business
  annotations:
    external-dns.alpha.kubernetes.io/target: "5825ee88-3939-4e16-ab32-856c6ff7df96.cfargotunnel.com"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Vikunja"
    gethomepage.dev/description: "Task Management"
    gethomepage.dev/group: "Productivity"
    gethomepage.dev/icon: "vikunja"
spec:
  rules:
  - host: vikunja.smadja.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vikunja
            port:
              number: 3456
